--- a/src/Windows/ArcGISRuntime.Windows.Samples/Samples/Security/PKIAuthentication/PKIAuthentication.xaml
+++ b/src/Windows/ArcGISRuntime.Windows.Samples/Samples/Security/PKIAuthentication/PKIAuthentication.xaml
@@ -2,7 +2,7 @@
     x:Class="PKIAuthentication.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:esriUI="using:Esri.ArcGISRuntime.UI">
+    xmlns:esriUI="using:Esri.ArcGISRuntime.UI.Controls">
     <Grid Background="DarkGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="350" />
